- recheck model mediation cases list before accessing the list on ui thread