@@ -244,7 +244,13 @@ public class MediatorController implements Controller {
 
     private void maybeSelectFirst() {
         if (!model.getListItems().getFilteredList().isEmpty()) {
-            UIThread.runOnNextRenderFrame(() -> selectionService.selectChannel(model.getListItems().getSortedList().get(0).getChannel()));
+            UIThread.runOnNextRenderFrame(() -> {
+                if (model.getListItems().getFilteredList().isEmpty()) {
+                    log.warn("UI thread check found no mediation cases, skipping");
+                } else {
+                    selectionService.selectChannel(model.getListItems().getSortedList().getFirst().getChannel());
+                }
+            });
         }
     }
 
